--- a/apps/bazel_parser/BUILD
+++ b/apps/bazel_parser/BUILD
@@ -37,4 +37,8 @@ py_library(
         "@pip//networkx",
         "@pip//panel",
     ],
+    tags = [
+        # Bokeh type-hinting is raising a lot of complaints that are invalid
+        "no-mypy",
+    ],
 )
