Make multiple ways of possibly distributing this

--- a/apps/bazel_parser/BUILD
+++ b/apps/bazel_parser/BUILD
@@ -1,4 +1,4 @@
-load("//bzl:py.bzl", "py_binary", "py_library", "py_test")
+load("//bzl:py.bzl", "py_binary", "py_library", "py_pex_binary", "py_test", "py_image")
 
 package(default_visibility = ["//visibility:private"])
 
@@ -89,4 +89,20 @@ py_binary(
         "@pip//pyyaml",
         "@pip//tqdm",
     ],
+)
+
+# XXX: This still requires that folks bring their own python runtime
+py_pex_binary(
+    name = "cli_pex",
+    binary = ":cli",
+)
+
+# XXX: Need to mount volume and bazel is not found, etc
+# Build and run this image with
+#     bazel run //apps/bazel_parser:bazel_parser_img_load_docker
+#     docker run --rm bazel_parser:latest
+py_image(
+    name = "bazel_parser_img",
+    binary = ":cli",
+    image_tags = ["bazel_parser:latest"],
 )
