--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -28,46 +28,48 @@ jobs:
           bazel build //...
       - name: Test
         run: |
-          bazel test //...
+          bazel test //... --output_groups=-mypy
           # Food for thought:
           # - Should we test in addition / segregate some?
           # - Should we test in different modes (-c opt / -c dbg)?
           # - Should we add instrumentation_filter to .bazelrc to reduce
           # analysis cache thrashing?
           # Could leave the above to buildbuddy ...
-      - name: Coverage
-        run: |
-          # Avoid enormous tests; can find them with: `bazel query 'attr(size, enormous, //...)'`
-          bazel coverage //... --combined_report=lcov --instrument_test_targets --instrumentation_filter="^//" --test_size_filters=-enormous
-      - name: Setup LCOV
-        uses: hrishikesh-kadam/setup-lcov@v1
-      - name: Coverage Report Generation
-        run: |
-          # Generate baseline
-          bazel run tools:coverage_baseline -- --root_dir `pwd` > baseline_coverage.dat
-          # Remove external/ sources: https://manpages.debian.org/unstable/lcov/lcov.1.en.html
-          lcov --remove "$(bazel info output_path)/_coverage/_coverage_report.dat" 'external*' -o most_coverage.dat
-          # Combine with baseline
-          lcov -a baseline_coverage.dat -a most_coverage.dat -o coverage.dat
-          # Show Table
-          lcov --list coverage.dat
-          # Generate HTML
-          genhtml --legend --highlight --branch-coverage --output genhtml coverage.dat
-      # See https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/storing-workflow-data-as-artifacts
-      - name: Archive coverage.dat
-        uses: actions/upload-artifact@v4
-        with:
-          name: code-coverage-report
-          path: coverage.dat
-      - name: Archive genhtml
-        uses: actions/upload-artifact@v4
-        with:
-          name: code-coverage-html
-          path: genhtml
-      - name: Upload coverage report to Codecov
-        uses: codecov/codecov-action@v4.0.1
-        with:
-          verbose: true
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: coverage.dat
-      - run: echo "Status is ${{ job.status }}."
+      # Need to disable coverage for now
+      # TODO(#216): Restore coverage
+      # - name: Coverage
+      #   run: |
+      #     # Avoid enormous tests; can find them with: `bazel query 'attr(size, enormous, //...)'`
+      #     bazel coverage //... --combined_report=lcov --instrument_test_targets --instrumentation_filter="^//" --test_size_filters=-enormous --output_groups=-mypy
+      # - name: Setup LCOV
+      #   uses: hrishikesh-kadam/setup-lcov@v1
+      # - name: Coverage Report Generation
+      #   run: |
+      #     # Generate baseline
+      #     bazel run tools:coverage_baseline -- --root_dir `pwd` > baseline_coverage.dat
+      #     # Remove external/ sources: https://manpages.debian.org/unstable/lcov/lcov.1.en.html
+      #     lcov --remove "$(bazel info output_path)/_coverage/_coverage_report.dat" 'external*' -o most_coverage.dat
+      #     # Combine with baseline
+      #     lcov -a baseline_coverage.dat -a most_coverage.dat -o coverage.dat
+      #     # Show Table
+      #     lcov --list coverage.dat
+      #     # Generate HTML
+      #     genhtml --legend --highlight --branch-coverage --output genhtml coverage.dat
+      # # See https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/storing-workflow-data-as-artifacts
+      # - name: Archive coverage.dat
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: code-coverage-report
+      #     path: coverage.dat
+      # - name: Archive genhtml
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: code-coverage-html
+      #     path: genhtml
+      # - name: Upload coverage report to Codecov
+      #   uses: codecov/codecov-action@v4.0.1
+      #   with:
+      #     verbose: true
+      #     token: ${{ secrets.CODECOV_TOKEN }}
+      #     files: coverage.dat
+      # - run: echo "Status is ${{ job.status }}."
