--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -39,6 +39,19 @@ jobs:
         run: |
           # Avoid enormous tests; can find them with: `bazel query 'attr(size, enormous, //...)'`
           bazel coverage //... --combined_report=lcov --instrument_test_targets --instrumentation_filter="^//" --test_size_filters=-enormous --output_groups=-mypy
+      - name: Check Disk Usage
+        if: always()
+        run: |
+          echo "Checking disk usage..."
+          df -h
+          echo "Disk usage by directory (sorted by size):"
+          du -h / --max-depth=1 2>/dev/null | sort -hr | head -n 20
+      - name: Check disk space
+        if: always()
+        run: |
+          sudo dpkg-query -Wf '${Installed-Size}\t${Package}\n' | sort -nr | head
+          df . -h
+          sudo du /usr/ -hx -d 4 --threshold=1G | sort -hr | head
       - name: Setup LCOV
         uses: hrishikesh-kadam/setup-lcov@v1
       - name: Coverage Report Generation
