--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -12,6 +12,27 @@ jobs:
     steps:
       - run: echo "The job was triggered by a ${{ github.event_name }} event, running on ${{ runner.os }}, ${{ github.ref }} @ ${{ github.repository }}."
       - uses: actions/checkout@v4
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@v1.3.1
+        with:
+          # this might remove tools that are actually needed,
+          # if set to "true" but frees about 6 GB
+          tool-cache: false
+          # Data on sizes from this run on 2025-04-25:
+          # https://github.com/michael-christen/toolbox/actions/runs/14666765877/job/41163363493
+          # 8.21 GB
+          android: true
+          # 1.6 GB
+          dotnet: true
+          # 6.2 GB
+          haskell: true
+          # 4.9 GB
+          # But ... It takes about 120s to clean, so setting false
+          large-packages: false
+          # 2.5 GB
+          docker-images: true
+          # 4.0 GB
+          swap-storage: true
       - uses: ./.github/actions/bazel-setup
         with:
           buildbuddy_api_key: ${{ secrets.BUILDBUDDY_API_KEY }}
@@ -35,41 +56,41 @@ jobs:
           # - Should we add instrumentation_filter to .bazelrc to reduce
           # analysis cache thrashing?
           # Could leave the above to buildbuddy ...
-      # Need to disable coverage for now
-      # TODO(#216): Restore coverage
-      # - name: Coverage
-      #   run: |
-      #     # Avoid enormous tests; can find them with: `bazel query 'attr(size, enormous, //...)'`
-      #     bazel coverage //... --combined_report=lcov --instrument_test_targets --instrumentation_filter="^//" --test_size_filters=-enormous --output_groups=-mypy
-      # - name: Setup LCOV
-      #   uses: hrishikesh-kadam/setup-lcov@v1
-      # - name: Coverage Report Generation
-      #   run: |
-      #     # Generate baseline
-      #     bazel run tools:coverage_baseline -- --root_dir `pwd` > baseline_coverage.dat
-      #     # Remove external/ sources: https://manpages.debian.org/unstable/lcov/lcov.1.en.html
-      #     lcov --remove "$(bazel info output_path)/_coverage/_coverage_report.dat" 'external*' -o most_coverage.dat
-      #     # Combine with baseline
-      #     lcov -a baseline_coverage.dat -a most_coverage.dat -o coverage.dat
-      #     # Show Table
-      #     lcov --list coverage.dat
-      #     # Generate HTML
-      #     genhtml --legend --highlight --branch-coverage --output genhtml coverage.dat
-      # # See https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/storing-workflow-data-as-artifacts
-      # - name: Archive coverage.dat
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: code-coverage-report
-      #     path: coverage.dat
-      # - name: Archive genhtml
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: code-coverage-html
-      #     path: genhtml
-      # - name: Upload coverage report to Codecov
-      #   uses: codecov/codecov-action@v4.0.1
-      #   with:
-      #     verbose: true
-      #     token: ${{ secrets.CODECOV_TOKEN }}
-      #     files: coverage.dat
-      # - run: echo "Status is ${{ job.status }}."
+      - name: Coverage
+        run: |
+          bazel coverage //... --combined_report=lcov --instrument_test_targets --instrumentation_filter="^//" --test_tag_filters=-skip-large-tests --output_groups=-mypy
+      - name: Setup LCOV
+        uses: hrishikesh-kadam/setup-lcov@v1
+      - name: Coverage Report Generation
+        run: |
+          # Generate baseline
+          bazel run tools:coverage_baseline -- --root_dir `pwd` > baseline_coverage.dat
+          # Remove external/ sources: https://manpages.debian.org/unstable/lcov/lcov.1.en.html
+          lcov --remove "$(bazel info output_path)/_coverage/_coverage_report.dat" 'external*' -o most_coverage.dat
+          # Combine with baseline
+          lcov -a baseline_coverage.dat -a most_coverage.dat -o coverage.dat
+          # Show Table
+          lcov --list coverage.dat
+          # Generate HTML
+          genhtml --legend --highlight --branch-coverage --output genhtml coverage.dat
+      # See https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/storing-workflow-data-as-artifacts
+      - name: Archive coverage.dat
+        uses: actions/upload-artifact@v4
+        with:
+          name: code-coverage-report
+          path: coverage.dat
+      - name: Archive genhtml
+        uses: actions/upload-artifact@v4
+        with:
+          name: code-coverage-html
+          path: genhtml
+      - name: Upload coverage report to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          verbose: true
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: coverage.dat
+      - name: Check Disk Usage
+        run: |
+          df -h
+      - run: echo "Status is ${{ job.status }}."
