Tweaked gmail analysis script from: https://chatgpt.com/share/68a729f3-770c-8002-81d3-c546d96134ba

--- a/requirements.in
+++ b/requirements.in
@@ -63,3 +63,9 @@ tabulate
 # Convenient backend for openhtf; https://www.tofupilot.com/
 tofupilot
 types-protobuf
+# gmail
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
+pandas
+matplotlib
