It's working, now to find a mechanism to solve, oher than trying everything

--- a/apps/rubiks/BUILD
+++ b/apps/rubiks/BUILD
@@ -6,4 +6,5 @@ py_binary(
     name = "rubiks",
     srcs = ["rubiks.py"],
     visibility = ["//:__subpackages__"],
+    deps = ["@pip//numpy"],
 )
