Specify mypy-cli python_version; manually XXX a specific bad dep

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -101,6 +101,9 @@ mypy_cli(
     deps = [
         "@pip//types_protobuf",
     ],
+    # Must match PYTHON_VERSION in MODULE.bazel
+    # LINK(7e463bc3_e4d9_4464_ba39_3217c4a86004)
+    python_version="3.11.9",
 )
 
 proto_library(
