--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -36,8 +36,9 @@ bazel_dep(name = "rules_python", version = "1.7.0", dev_dependency = True)
 python = use_extension("@rules_python//python/extensions:python.bzl", "python")
 
 # Must match interpreter_version in .bazelrc
+# & mypy_cli in //:BUILD
 # LINK(7e463bc3_e4d9_4464_ba39_3217c4a86004)
-PYTHON_VERSION = "3.11"
+PYTHON_VERSION = "3.11.9"
 
 python.toolchain(
     configure_coverage_tool = True,
