--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -362,3 +362,10 @@ register_toolchains(
 
 bazel_dep(name = "rules_proto", version = "7.1.0")
 bazel_dep(name = "gazelle", version = "0.47.0", repo_name="bazel_gazelle")
+
+
+bazel_dep(name = "rules_multitool", version = "1.9.0")
+
+multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
+multitool.hub(lockfile = "//:multitool.lock.json")
+use_repo(multitool, "multitool")
