--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -106,7 +106,7 @@ bazel_dep(name = "toolchains_llvm", version = "0.10.3")
 #     - bazel_dep(name = "googletest", version = "1.15.2")
 # - emboss
 # - freertos
-# - gazelle
+# - gazelle: https://github.com/bazel-contrib/bazel-gazelle
 # - hedron_compile_commands
 # - nanopb
 # - pico-sdk
