Update it all (#233)
![hal_changing_lightbulb](https://github.com/user-attachments/assets/029fa0c6-9489-4088-b278-317074e2f8aa)

I wanted to checkout `gazelle_cc`, but started having issues with
various bazel modules and the current bazel version I'm on. After
attempting a few hacks, I endeavoured to update to Bazel 8 and update
most of my packages to their "latest"ish versions, in the hopes that
this would lead to fewer cross-couplings.

Ironically, while doing this, I substituted gazelle's binary out, due to
the go compilation of tree sitter failing. With this substitution, I
can't configure the languages. So, I'll have to revisit.

- [x] Get tests passing
- [x] Make a table of third party dependencies, describe relationships,
and provide links
- [x] Clean up the changes and reorganize, etc.
- [x] check gazelle, etc. still functions

--- a/examples/pigweed/modules/blinky/BUILD
+++ b/examples/pigweed/modules/blinky/BUILD
@@ -44,10 +44,10 @@ cc_library(
     ],
     deps = [
         "//examples/pigweed/apps/blinky/system",
-        "//examples/pigweed/modules/timer_future",
         "@pigweed//pw_async2:coro",
         "@pigweed//pw_async2:coro_or_else_task",
         "@pigweed//pw_async2:dispatcher",
+        "@pigweed//pw_async2:time_provider",
         "@pigweed//pw_chrono:system_clock",
         "@pigweed//pw_function",
         "@pigweed//pw_sync:interrupt_spin_lock",
@@ -62,9 +62,9 @@ pw_cc_test(
     deps = [
         ":blinky",
         "@pigweed//pw_allocator:testing",
-        "@pigweed//pw_async2:dispatcher",
+        "@pigweed//pw_async2:simulated_time_provider",
+        "@pigweed//pw_async2:testing",
         "@pigweed//pw_digital_io:digital_io_mock",
-        "@pigweed//pw_thread:sleep",
         "@pigweed//pw_unit_test",
     ],
 )
