Update cc_library usage everywhere

--- a/apps/sbr/BUILD
+++ b/apps/sbr/BUILD
@@ -1,5 +1,6 @@
 load("@pigweed//targets/host_device_simulator:transition.bzl", "host_device_simulator_binary")
 load("@pigweed//targets/rp2040:flash.bzl", "flash_rp2040")
+load("//bzl:cc.bzl", "cc_binary")
 load("//third_party/pigweed/tools:tools.bzl", "device_console", "host_console")
 load(":binary.bzl", "rp2040_binary", "rp2350_binary")
 
