--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -35,7 +35,7 @@ module(
 # any overrides / configuration in their respective sections ordered alphabetically
 # [BCR](https://registry.bazel.build/)
 bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
-bazel_dep(name = "aspect_rules_js", version = "1.39.0")
+bazel_dep(name = "aspect_rules_js", version = "2.8.2")
 bazel_dep(name = "aspect_rules_lint", version = "1.0.3")
 bazel_dep(name = "aspect_rules_py", version = "1.6.6")
 bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.7.1")
@@ -74,7 +74,7 @@ bazel_dep(name = "toolchains_llvm", version = "0.10.3")
 
 # Repo Notes:
 # - aspect_bazel_lib: https://registry.bazel.build/modules/aspect_bazel_lib
-# - aspect_rules_js
+# - aspect_rules_js: https://registry.bazel.build/modules/aspect_rules_js
 #   - NOTE: We don't really use/support JS in this repo, and if you need to
 #   you'll have some more config to do, but we register rules_js here so we can
 #   use it to pull a few javascript packages used for repo tooling, like
