--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -36,7 +36,7 @@ module(
 # [BCR](https://registry.bazel.build/)
 bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
 bazel_dep(name = "aspect_rules_js", version = "2.8.2")
-bazel_dep(name = "aspect_rules_lint", version = "1.0.3")
+bazel_dep(name = "aspect_rules_lint", version = "1.10.2")
 bazel_dep(name = "aspect_rules_py", version = "1.6.6")
 bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.7.1")
 bazel_dep(name = "bazel_skylib", version = "1.7.1")
@@ -85,7 +85,7 @@ bazel_dep(name = "toolchains_llvm", version = "0.10.3")
 #      bazel_dep(name = "rules_nodejs", version = "5.8.2")
 #      node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
 #      node.toolchain(node_version = "16.14.2")
-# - aspect_rules_lint
+# - aspect_rules_lint: https://registry.bazel.build/modules/aspect_rules_lint
 #   - Next, follow the install instructions for
 #     - linting: https://github.com/aspect-build/rules_lint/blob/v1.0.3/docs/linting.md
 #     - formatting: https://github.com/aspect-build/rules_lint/blob/v1.0.3/docs/formatting.md
